--- a/UI/package.json
+++ b/UI/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
